Apparently root is required after all